--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ before_install:
 #  - yes y | sudo python -m pip uninstall pip
   - wget https://bootstrap.pypa.io/get-pip.py | python - --user
   - ls -ltr ~/
+  - pwd
   - find . -type f -iname *pip* -print
 #  - pip install robotframework-seleniumlibrary
 # - find / -type f -iname webdriver.py -print
