--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: java
 #sudo: required
 before_install:
 #  - yes y | sudo python -m pip uninstall pip
-  - wget https://bootstrap.pypa.io/get-pip.py | python - --user
+  - wget https://bootstrap.pypa.io/get-pip.py
+  - python get-pip.py
   - pwd
   - cd ~/
   - pwd 
