--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
   - pwd
   - which pip 
   - find . -type f -iname *pip* -print
-  - pip install pyOpenSSL ndg-httpsclient pyasn1
+  - sudo pip install pyOpenSSL ndg-httpsclient pyasn1
   - pip install robotframework-seleniumlibrary
 # - find / -type f -iname webdriver.py -print
 #script: mvn clean install
