--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,7 @@ before_install:
   - sudo python get-pip.py 
   - pwd
   - which pip 
-  - find . -type f -iname *pip* -print
   - sudo pip install pyOpenSSL ndg-httpsclient pyasn1
-  - pip install robotframework-seleniumlibrary
-# - find / -type f -iname webdriver.py -print
+  - sudo pip install robotframework-seleniumlibrary
+  - find . -type f -iname webdriver.py -print
 #script: mvn clean install
