--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ before_install:
   - mkdir -p target/robotframework/libraries
   - find / -type d -name site-packages
   - find / -type d -name dist-packages
-  - cp -r /usr/local/lib/python2.7/site-packages/* target/robotframework/libraries/ 
+  - cp -r /usr/local/lib/python2.7/dist-packages/* target/robotframework/libraries/ 
   - find . -type f -iname webdriver.py -print
 #script: mvn clean install
