--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,6 @@ before_install:
   - sudo pip install pyOpenSSL ndg-httpsclient pyasn1
   - sudo pip install robotframework-seleniumlibrary
   - mkdir -p target/robotframework/libraries
-#  - ls -ltr /usr/local/lib/python2.7/site-packages
-#  - find / -type d -name site-packages
-#  - find / -type d -name dist-packages
-#  - cp -r /usr/local/lib/python2.7/site-packages/* target/robotframework/libraries/ 
-  - find / -type f -iname webdriver.py -print
+  - cp -r /usr/local/lib/python2.7/dist-packages/* target/robotframework/libraries/ 
+#  - find / -type f -iname webdriver.py -print
 #script: mvn clean install
