--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,5 @@ before_install:
   - mkdir -p target/robotframework/libraries
   - cp -r /usr/local/lib/python2.7/dist-packages/* target/robotframework/libraries/ 
 #  - find / -type f -iname webdriver.py -print
+  - find target/robotframework/libraries -type d -iname urllib3
 script: mvn install
