--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@ language: java
 sudo: required
 before_install:
 #  - yes y | sudo python -m pip uninstall pip
-  - wget https://bootstrap.pypa.io/get-pip.py
-  - sudo python get-pip.py 
-  - pwd
-  - which pip 
+#  - wget https://bootstrap.pypa.io/get-pip.py
+#  - sudo python get-pip.py 
+#  - pwd
+#  - which pip 
   - sudo pip install pyOpenSSL ndg-httpsclient pyasn1 urllib3
   - sudo pip install robotframework-seleniumlibrary
   - mkdir -p target/robotframework/libraries
