--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ before_install:
 #  - sudo python get-pip.py 
 #  - pwd
 #  - which pip
-  - pip install --upgrade pip 
   - sudo pip install pyOpenSSL ndg-httpsclient pyasn1 urllib3
+  - sudo pip install --upgrade pip 
   - sudo pip install robotframework-seleniumlibrary
   - mkdir -p target/robotframework/libraries
   - cp -r /usr/local/lib/python2.7/dist-packages/* target/robotframework/libraries/ 
