--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,12 @@ before_install:
 #  - sudo python get-pip.py 
 #  - pwd
 #  - which pip
-  - sudo pip install pyOpenSSL ndg-httpsclient pyasn1 urllib3
+  - sudo pip install pyOpenSSL ndg-httpsclient pyasn1
   - sudo pip install --upgrade pip 
-  - sudo pip install robotframework-seleniumlibrary
+  - pip install robotframework-seleniumlibrary urllib3 --user
   - mkdir -p target/robotframework/libraries
-  - cp -r /usr/local/lib/python2.7/dist-packages/pip/_vendor/* target/robotframework/libraries/ 
+  - ls -lR /usr/local/lib/python2.7/ ~
+#  - cp -r /usr/local/lib/python2.7/dist-packages/pip/_vendor/* target/robotframework/libraries/ 
 #  - find / -type f -iname webdriver.py -print
   - find target/robotframework/libraries -type d -iname urllib3
-script: mvn install
+#script: mvn install
