--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,11 @@ before_install:
 #  - which pip
   - sudo pip install pyOpenSSL ndg-httpsclient pyasn1
   - sudo pip install --upgrade pip 
-  - sudo pip install robotframework-seleniumlibrary urllib3
+  - sudo pip install robotframework-seleniumlibrary
   - mkdir -p target/robotframework/libraries
-  - ls -lR /usr/local/lib/python2.7/ ~
-#  - cp -r /usr/local/lib/python2.7/dist-packages/pip/_vendor/* target/robotframework/libraries/ 
-#  - find / -type f -iname webdriver.py -print
+#  - ls -lR /usr/local/lib/python2.7/ ~
+  - cp -r /usr/local/lib/python2.7/dist-packages/* target/robotframework/libraries/ 
+  - cp -r /usr/local/lib/python2.7/dist-packages/pip/_vendor/* target/robotframework/libraries/ 
+  - find / -type f -iname webdriver.py -print
   - find target/robotframework/libraries -type d -iname urllib3
-#script: mvn install
+script: mvn install
