--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,6 @@ before_install:
 #  - ls -lR /usr/local/lib/python2.7/ ~
   - cp -r /usr/local/lib/python2.7/dist-packages/* target/robotframework/libraries/ 
   - cp -r /usr/local/lib/python2.7/dist-packages/pip/_vendor/* target/robotframework/libraries/ 
-  - find / -type f -iname webdriver.py -print
+  - find target/robotframework/libraries -type f -iname webdriver.py
   - find target/robotframework/libraries -type d -iname urllib3
 script: mvn install
