--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,6 @@ before_install:
   - mkdir -p target/robotframework/libraries
 #  - ls -lR /usr/local/lib/python2.7/ ~
   - cp -r /usr/local/lib/python2.7/dist-packages/* target/robotframework/libraries/ 
-  - cp -r /usr/local/lib/python2.7/dist-packages/pip/_vendor/* target/robotframework/libraries/ 
-  - find target/robotframework/libraries -type f -iname webdriver.py
-  - find target/robotframework/libraries -type d -iname urllib3
+  - cp -r /usr/local/lib/python2.7/dist-packages/pip/_vendor/* target/robotframework/libraries/
+  - cat target/robotframework/libraries/selenium/webdriver/chrome/webdriver.py
 script: mvn install
