--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,6 @@ before_install:
   - cp -r /usr/local/lib/python2.7/dist-packages/* target/robotframework/libraries/ 
   - cp -r /usr/local/lib/python2.7/dist-packages/pip/_vendor/* target/robotframework/libraries/
   - cat target/robotframework/libraries/selenium/webdriver/chrome/webdriver.py
-script: mvn install
+script: mvn compile
+after_install:
+  - cat target/robotframework/libraries/selenium/webdriver/chrome/webdriver.py
