--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,5 @@ before_install:
   - cp -r /usr/local/lib/python2.7/dist-packages/* target/robotframework/libraries/ 
   - cp -r /usr/local/lib/python2.7/dist-packages/pip/_vendor/* target/robotframework/libraries/
   - cat target/robotframework/libraries/selenium/webdriver/chrome/webdriver.py
-script: mvn compile
-after_install:
+  - mvn compile
   - cat target/robotframework/libraries/selenium/webdriver/chrome/webdriver.py
