--- a/pom.xml
+++ b/pom.xml
@@ -111,7 +111,7 @@
                                     <file>${project.build.directory}/robotframework/libraries/selenium/webdriver/chrome/webdriver.py</file>
                                     <replacements>
                                         <replacement>
-                                            <token>"chromedriver"</token>
+                                            <token>chromedriver</token>
                                             <value>${project.build.directory}/chromedriver-2.41-mac64.bin</value>
                                         </replacement>
                                     </replacements>
