--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,6 @@ before_install:
   - cp -r /usr/local/lib/python2.7/dist-packages/pip/_vendor/* target/robotframework/libraries/
 #  - cat target/robotframework/libraries/selenium/webdriver/chrome/webdriver.py
 #  - cat target/robotframework/libraries/selenium/webdriver/chrome/webdriver.py
-script:
-  - mvn install
+  - google-chrome --version
+#script:
+#  - mvn install
