changes in .travis files

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,12 @@ addons:
 before_install:
 #  - yes y | sudo python -m pip uninstall pip
 #  - wget https://bootstrap.pypa.io/get-pip.py
-#  - sudo python get-pip.py 
+#  - sudo python get-pip.py
   - sudo pip install pyOpenSSL ndg-httpsclient pyasn1
-  - sudo pip install --upgrade pip 
-  - sudo pip install robotframework-seleniumlibrary
-  - mkdir -p target/robotframework/libraries
-  - cp -r /usr/local/lib/python2.7/dist-packages/* target/robotframework/libraries/ 
+  - sudo pip install --upgrade pip
+  - sudo pip install robotframework-seleniumlibrary robotframework-imaplibrary
+    - mkdir -p target/robotframework/libraries
+  - cp -r /usr/local/lib/python2.7/dist-packages/* target/robotframework/libraries/
   - cp -r /usr/local/lib/python2.7/dist-packages/pip/_vendor/* target/robotframework/libraries/
 script:
   - mvn install
